# otel-workshop

./: .gitignore  GitVersion.yml  README.md  compose.yml  traffic-simulator.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: copilot-setup-steps.yml  pr-check.yml  semantic-version.yml
resources/: otel_collector.drawio
src/data-processing/: Cargo.toml  Dockerfile
src/data-processing/src/: data_processing.rs  main.rs  telemetry_conf.rs
src/ebpf-instrumenter/: config.yaml
src/otelcollector/: otelcol-config.yml
src/temperature-calculator/: Dockerfile  pom.xml
src/temperature-calculator/src/main/java/io/temp/calculator/: CalculatorApplication.java  CalculatorController.java  Thermometer.java
src/temperature-calculator/src/main/resources/: logback.xml
src/temperature-simulator/: .dockerignore  Dockerfile  pom.xml
src/temperature-simulator/src/main/java/io/temp/simulator/: TemperatureApplication.java  TemperatureController.java  Thermometer.java
src/temperature-simulator/src/main/resources/: logback.xml
