[package]
name = "dataprocessing"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "dataprocessing"
path = "src/main.rs"

[dependencies]
actix-web = "4"
awc = { version = "3.7", default-features = false, features = ["compress-zstd"] }
log = "0.4"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

# OpenTelemetry dependencies
actix-web-opentelemetry = { version = "0.17.0", features = ["sync-middleware", "awc"] }
opentelemetry = { version = "0.22", features = ["trace"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"]}
opentelemetry-otlp = { version = "0.15.0", features = ["tokio", "trace"] }
